// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentsService Create & update 1`] = `true`;

exports[`ContentsService Create 1`] = `true`;

exports[`ContentsService List Contents 1`] = `
Object {
  "children": Object {},
  "createAt": "",
  "id": "",
  "page": true,
  "parentId": "",
  "priority": 1000,
  "title": "TOP",
  "title_type": 1,
  "updateAt": "",
  "value": "",
  "value_type": "HTML",
  "visible": null,
}
`;

exports[`ContentsService List Contents 2`] = `
Object {
  "children": Object {
    "0": Object {
      "children": Object {},
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 1,
      "title": "タイトル20",
      "title_type": 1,
      "updateAt": "",
      "value": "<div>内容2</div>",
      "value_type": "HTML",
      "visible": null,
    },
    "1": Object {
      "children": Object {},
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 2,
      "title": "タイト40",
      "title_type": 1,
      "updateAt": "",
      "value": "<div>内容4</div>",
      "value_type": "HTML",
      "visible": null,
    },
    "2": Object {
      "children": Object {
        "0": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 1,
          "title": "タイトル4",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容4</div>",
          "value_type": "HTML",
          "visible": null,
        },
        "1": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 2,
          "title": "タイトル2",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容2</div>",
          "value_type": "HTML",
          "visible": null,
        },
        "2": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 3,
          "title": "タイトル1",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容1</div>",
          "value_type": "HTML",
          "visible": null,
        },
        "3": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 4,
          "title": "タイトル3",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容3</div>",
          "value_type": "HTML",
          "visible": null,
        },
      },
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 3,
      "title": "New",
      "title_type": 1,
      "updateAt": "",
      "value": "",
      "value_type": "HTML",
      "visible": null,
    },
    "3": Object {
      "children": Object {},
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 4,
      "title": "タイトル30",
      "title_type": 1,
      "updateAt": "",
      "value": "<div>内容3</div>",
      "value_type": "HTML",
      "visible": null,
    },
    "4": Object {
      "children": Object {},
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 5,
      "title": "タイトル10",
      "title_type": 1,
      "updateAt": "",
      "value": "<div>内容1</div>",
      "value_type": "HTML",
      "visible": null,
    },
  },
  "createAt": "",
  "id": "",
  "page": true,
  "parentId": "",
  "priority": 1000,
  "title": "TOP",
  "title_type": 1,
  "updateAt": "",
  "value": "",
  "value_type": "HTML",
  "visible": null,
}
`;
